# Fined-tuned-LLM-like-GPT2-and-Transformers-based-Automated-Essay-Evaluation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/nginx/: essayeval.conf
data_schema/: Data.py
jupyter-notebooks/: DeBERTa-v3.ipynb
scripts/: index.js
src/train_py/: train_GPT.py
src/utils/: csv_to_parquet.py  transformers_to_onnx.py
static/css/: index.css  style.css
static/scripts/: index.js  script.js
static/templates/: index.html
templates/: index.css  index.html
train_py/: train_DeBERTa-v3.py  train_DistilBERT.py  train_GPT.py  train_LSTM.py
utils/: artifacts_downloader.py  csv_to_parquet.py  download_and_structure_artifacts.py  transformers_to_onnx.py
